--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -81,9 +81,9 @@
 
         .circle {
             border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            border: 1px solid black;
+            width: 70px;
+            height: 70px;
+            border: 0px solid white;
         }
     </style>
 </head>
@@ -95,7 +95,7 @@
             <li class="link"><a href="{{ site.baseurl }}/password">Requests</a></li>
             <li class="link"><a href="{{ site.baseurl }}/vulnerabilities">About</a></li>
             <a href="{{ site.baseurl }}/profile" class="nav_btn">
-                <img class="circle" src="https://cdn.discordapp.com/attachments/879557685253664768/1206775295491706880/360_F_509597532_RKUuYsERhODmkxkZd82pSHnFtDAtgbzJ.png?ex=65dd3c13&is=65cac713&hm=6609ac7a33b11e2c4ab3fd1cc54908d5eb5d1f8c3ff015be2621028b6707a9ff&">
+                <img class="circle" src="images/logo.png" style='object-fit: cover'/>
             </a>
         </ul>
     </nav>
