--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -87,8 +87,8 @@
         <div class="nav_logo"><a href="{{ site.baseurl }}/">DivHacktivism</a></div>
         <ul class="nav_links">
             <li class="link"><a href="{{ site.baseurl }}/home">Home</a></li>
-            <li class="link"><a href="{{ site.baseurl }}/password">Requests</a></li>
-            <li class="link"><a href="{{ site.baseurl }}/vulnerabilities">About</a></li>
+            <li class="link"><a href="{{ site.baseurl }}/requests">Requests</a></li>
+            <li class="link"><a href="{{ site.baseurl }}/about">About</a></li>
             <a href="{{ site.baseurl }}/profile" class="nav_btn">
                 <img class="circle" src="https://cdn.discordapp.com/attachments/879557685253664768/1206775295491706880/360_F_509597532_RKUuYsERhODmkxkZd82pSHnFtDAtgbzJ.png?ex=65dd3c13&is=65cac713&hm=6609ac7a33b11e2c4ab3fd1cc54908d5eb5d1f8c3ff015be2621028b6707a9ff&">
             </a>
