AI python and request formatting
Co-authored-by: Oxford5Comma <Oxford5Comma@users.noreply.github.com>

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -91,7 +91,7 @@
     <nav>
         <div class="nav_logo"><a href="{{ site.baseurl }}/" style="color:white">DivHacktivism</a></div>
         <ul class="nav_links">
-            <li class="link"><a href="{{ site.baseurl }}/AI">AI Recommendation</a></li>
+            <li class="link"><a href="{{ site.baseurl }}/AI">AI-Powered Search Recommendation</a></li>
             <li class="link"><a href="{{ site.baseurl }}/home">Home</a></li>
             <li class="link"><a href="{{ site.baseurl }}/requests">Requests</a></li>
             <li class="link"><a href="{{ site.baseurl }}/about">About</a></li>
